# aquakv

./: LICENSE  README.md  evaluate_human_eval.py  evaluate_longbench.py  evaluate_mmlu.py  evaluate_perplexity.py  inference.py  requirements.txt  tests.py  train_predictors.py
LongBench/: README.md  custom_cache.py  eval.py  pred.py  pyproject.toml
LongBench/config/: model2maxlen.json  model2path.json
aquakv/: cache_utils.py  datautils.py  edenn.py  grid_generator.py  linear_utils.py  modelutils.py  quantizers.py  tests.py
aquakv/grids/: EDEN4-256.pt  EDEN6-4096.pt  QUIPSHARP8-65536.pt
inference_configs/: llama_3.2_3b_aqua_naive.yaml  llama_3.2_3b_bf16.yaml
notebooks/: Evaluating_PPL.ipynb  train_probes_3.1.ipynb  training_with_ppl_eval.ipynb  training_with_ppl_eval_perchannel.ipynb  training_with_ppl_eval_perheadchannel.ipynb
